# openobserve-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MIGRATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  USAGE.md  pyproject.toml  requirements.txt  setup.py  test_auto_shutdown.py  test_init.py
.github/workflows/: ci.yml  lint.yml  security.yml
docs/: native-opentelemetry-agent-identity.md
examples/: basic_example.py  build_chain.py  env_example.py  logs_example.py  metrics_example.py  openai_example.py  qa_chain.py  requirements.txt  session_demo.py  user_tracking.py
openobserve/: __init__.py  agent.py  client.py  config.py
openobserve_sdk/: __init__.py  client.py
tests/: __init__.py  test_agent.py  test_client.py  test_config.py
